--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -12,8 +12,13 @@ body {
 }
 pre, code {
   font-family: "Roboto Mono", "Courier New", monospace;
-  font-size: 0.7rem;
-  line-height: 0.5; /* 调整为你需要的行间距 */
+  font-size: 0.9rem;
+}
+
+// 更具体地，只对 pre 标签内的 code 标签设置行间距
+
+pre code {
+  line-height: 1.0; // 调整为你想要的行间距
 }
 
 h2, h3, h4, h5 { margin-top: 1.5em; }
