--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -17,9 +17,9 @@ pre, code {
 
 // 更具体地，只对 pre 标签内的 code 标签设置行间距
 
-// pre code {
-//   line-height: 1.0; // 调整为你想要的行间距
-// }
+pre code {
+  line-height: 1.5; // 调整为你想要的行间距
+}
 
 h2, h3, h4, h5 { margin-top: 1.5em; }
 
