--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -1,12 +1,14 @@
-{% if site.posts.size > 0 %}
+
+{% assign grouped_posts = site.posts | group_by: "categories" %}
+
+{% for group in grouped_posts %}
+  <h2>{{ group.name | first }}</h2> <!-- 类别名称（取数组的第一个值） -->
   <ul>
-    {% for post in site.posts %}
-      <li class="post-list-item">
-        <span class="home-date">
-          {{ date: site.theme_config.date_format }}»
-        </span>
-        <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+    {% for post in group.items %}
+      <li>
+        <span>{{ post.date | date: site.theme_config.date_format }}</span>
+        <a href="{{ post.url }}">{{ post.title }}</a>
       </li>
     {% endfor %}
   </ul>
-{% endif %}
+{% endfor %}
