--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -3,10 +3,11 @@
 
 {% for group in grouped_posts %}
   <h2>{{ group.name | first }}</h2> <!-- 类别名称（取数组的第一个值） -->
+  <a>{{ group.name }}</a>
   <ul>
     {% for post in group.items %}
       <li>
-        <span>{{ post_num: site.theme_config.post_num }}</span>
+        <span>{{ post_num: site.theme_config.post_num }}</span> <!-- 修改这里可以修改排列顺序和内容 -->
         <a href="{{ post.url }}">{{ post.title }}</a>
       </li>
     {% endfor %}
