--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -2,14 +2,18 @@
 {% assign grouped_posts = site.posts | group_by: "categories" %}
 
 {% for group in grouped_posts %}
-
+  <!-- 判断 group.name 是字符串还是数组，并取第一个分类名称 -->
+  {% if group.name is array %}
+    {% assign category_name = group.name[0] %}
+  {% else %}
+    {% assign category_name = group.name %}
+  {% endif %}
 
   <h2>{{ category_name }}</h2> <!-- 输出类别名称 -->
   <ul>
     {% for post in group.items %}
       <li>
-        <!-- 你可以在这里实现文章序号逻辑，目前未实现 -->
-        <span>{{ post_num: site.theme_config.post_num }}</span> <!-- 修改这里可以修改排列顺序和内容 -->
+        <span>序号（如果需要，可自行添加逻辑）</span>
         <a href="{{ post.url }}">{{ post.title }}</a>
       </li>
     {% endfor %}
