--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -5,7 +5,7 @@
   {% assign category_name = group.name | first %} <!-- 尝试取第一个元素（但这在 group_by 中不起作用） -->
   <!-- 或者手动解析字符串（不推荐，因为容易出错） -->
   {% if group.name contains "[" %}
-    {% assign category_name = group.name | remove: "[" | remove: "]" | strip %}
+    {% assign category_name = group.name | remove: "[" | remove: "]" | remove: """ | strip %}
   {% else %}
     {% assign category_name = group.name %}
   {% endif %}
@@ -13,7 +13,7 @@
   <ul>
     {% for post in group.items %}
       <li>
-        
+
         <a href="{{ post.url }}">{{ post.title }}</a>
       </li>
     {% endfor %}
