--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -2,18 +2,20 @@
 {% assign grouped_posts = site.posts | group_by: "categories" %}
 
 {% for group in grouped_posts %}
-  {% assign category_name = group.name | first %} <!-- 尝试取第一个元素（但这在 group_by 中不起作用） -->
-  <!-- 或者手动解析字符串（不推荐，因为容易出错） -->
-  {% if group.name contains "[" %}
-    {% assign category_name = group.name | remove: "[" | remove: "]" | remove: """ | strip %}
-  {% else %}
-    {% assign category_name = group.name %}
-  {% endif %}
+  {% assign raw_category_name = group.name %}
+  
+  <!-- 去掉方括号和引号 -->
+  {% assign category_name = raw_category_name 
+    | remove: "[" 
+    | remove: "]" 
+    | remove: '"' 
+    | strip %}
+  
   <h2>{{ category_name }}</h2>
   <ul>
     {% for post in group.items %}
       <li>
-
+        
         <a href="{{ post.url }}">{{ post.title }}</a>
       </li>
     {% endfor %}
