update post list

--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -1,3 +1,8 @@
+<style>
+  .category-title {
+    font-size: 16px; /* 设置字体大小 */
+  }
+</style>
 
 {% assign grouped_posts = site.posts | group_by: "categories" %}
 
@@ -11,7 +16,7 @@
     | remove: '"' 
     | strip %}
   
-  <h2 style="font-size: 18px;">{{ category_name }}</h2>
+  <h2 class="category-title">{{ category_name }}</h2> <!-- 使用自定义类 -->
   <ul>
     {% for post in group.items %}
       <li>
