--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -24,7 +24,7 @@
     {% for post in group.items %}
       <li>
 
-        <a href="{{ post.url }}">{{ post.title }}</a>
+        <!-- <a href="{{ post.url }}">{{ post.title }}</a> -->
       </li>
     {% endfor %}
   </ul>
