--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,10 +15,16 @@ layout: default
 </header>
 
 {{ content }}
-
+<!-- 这部分是工具性网站集合 -->
 {% if site.theme_config.show_projects == true %}
   <h2>{{ site.theme_config.home.title_projects }}</h2>
   {% include card_list.html collection=site.data.home.project_entries %}
+{% endif %}
+
+<!-- 这部分是电脑硬件部分 -->
+{% if site.theme_config.show_computer_projects == true %}
+  <h2>{{ site.theme_config.home.title_computer_projects }}</h2>
+  {% include card_list.html collection=site.data.home.computer_entries %}
 {% endif %}
 
 {% if site.theme_config.show_misc_list == true %}
