update post list

--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -7,7 +7,7 @@
   }
 </style>
 
-<!-- {% assign grouped_posts = site.posts | group_by: "categories" %}
+{% assign grouped_posts = site.posts | group_by: "categories" %}
 
 {% for group in grouped_posts %}
   {% assign raw_category_name = group.name %}
@@ -28,4 +28,4 @@
       </li>
     {% endfor %}
   </ul>
-{% endfor %} -->
+{% endfor %}
