--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,11 +27,12 @@ layout: default
   {% include card_list.html collection=site.data.home.computer_entries %}
 {% endif %}
 
-{% if site.theme_config.show_misc_list == true %}
+<!-- {% if site.theme_config.show_misc_list == true %}
   <h2>{{ site.theme_config.home.title_misc_list }}</h2>
   {% include vertical_list.html collection=site.data.home.misc_entries %}
-{% endif %}
+{% endif %} -->
 
+<!-- 这部分是在Home界面加上所有Blog -->
 <!-- {% if site.theme_config.show_blog == true %}
   <h2>{{ site.theme_config.home.title_blog }}</h2>
   {% include post_list.html %}
