--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+
+<!-- 这部分修改的是：Blog（标题栏点进去）中的内容 -->
+
 <a href="{{ "/" | relative_url }}">{{ site.theme_config.back_home_text }}</a>
 
 <header>
