--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,9 @@
 layout: default
 ---
 
-<!-- <a href="{{ "/" | relative_url }}">{{ site.theme_config.back_home_text }}</a>
+<!-- 这里修改的是：每一个post的内容 -->
+
+<a href="{{ "/" | relative_url }}">{{ site.theme_config.back_home_text }}</a>
 <h1 class="post-title">{{ page.title }}</h1>
 {% include date_and_social_share.html %}
-{{ content }} -->
+{{ content }}
