--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@ layout: default
 <!-- 这部分是电脑小技巧集合 -->
 {% if site.theme_config.show_computer_skills_projects == true %}
   <h2>{{ site.theme_config.home.title_computer_skills_projects }}</h2>
-  {% include card_list.html collection=site.data.home.project_entries %}
+  {% include card_list.html collection=site.data.home.computer_skills_entries %}
 {% endif %}
 computer_skills_entries
 
