--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@ layout: default
 <!-- 这部分是工具性网站集合 -->
 {% if site.theme_config.show_projects == true %}
   <h2>{{ site.theme_config.home.magic_web_projects }}</h2>
-  {% include card_list.html collection=site.data.home.project_entries %}
+  {% include card_list.html collection=site.data.home.magic_web_entries %}
 {% endif %}
 
 <!-- 这部分是电脑小技巧集合 -->
