--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,10 +34,10 @@ layout: default
 {% endif %}
 
 <!-- 这部分是网站调试部分集合 -->
-{% if site.theme_config.show_web_skills_projects == true %}
+<!-- {% if site.theme_config.show_web_skills_projects == true %}
   <h2>{{ site.theme_config.home.title_web_skills_projects }}</h2>
   {% include card_list.html collection=site.data.home.web_skills_entries %}
-{% endif %}
+{% endif %} -->
 
 <!-- {% if site.theme_config.show_misc_list == true %}
   <h2>{{ site.theme_config.home.title_misc_list }}</h2>
