--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,8 +16,8 @@ layout: default
 
 {{ content }}
 <!-- 这部分是工具性网站集合 -->
-{% if site.theme_config.magic_web_projects == true %}
-  <h2>{{ site.theme_config.home.magic_web_projects }}</h2>
+{% if site.theme_config.show_magic_web_projects == true %}
+  <h2>{{ site.theme_config.home.title_magic_web_projects }}</h2>
   {% include card_list.html collection=site.data.home.magic_web_entries %}
 {% endif %}
 
